update 20/1/2025